[tool.poetry]
name = "metallographic-image-analysis"
version = "0.0.1"
description = "Metallographic Image Analysis"
authors = ["manashmandal <manashmndl@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
notebook = "^7.2.0"
torch = "^2.3.0"
torchvision = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
